tests/baselines/reference/jsxFactoryIdentifierAsParameter.errors.txt
test.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== test.tsx (1 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface IntrinsicElements {
            [s: string]: any;
        }
    }
    
    export class AppComponent {
        render(createElement) {
            return <div />;
        }
    }
    